--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Guías de Juegos</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <style>
         body {
             background-image: url('Jellyfish.jpg');
