--- a/index.html
+++ b/index.html
@@ -66,10 +66,19 @@
         h2 {
             text-align: center; /* Centrar el texto */
         }
+        #backgroundAnimation {
+            width: 100%;
+            height: 100vh;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1;
+            object-fit: cover; /* Asegurar que la animación cubra toda la pantalla */
+        }
     </style>
 </head>
 <body>
-    <div id="backgroundAnimation" style="width: 100%; height: 100vh; position: absolute; top: 0; left: 0; z-index: -1;"></div>
+    <div id="backgroundAnimation"></div>
 
     <header>
         <h1>Guías de Juegos</h1>
@@ -163,7 +172,7 @@
             renderer: 'svg',
             loop: true,
             autoplay: true,
-            path: 'background.json' // Ruta al archivo JSON de tu animación
+            path: 'ruta_de_tu_animacion.json' // Ruta al archivo JSON de tu animación
         });
     </script>
 </body>
