--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <script src="consolas.js"></script>
     <style>
         body {
-            background-image: url('Jellyfish.jpg');
-            background-size: cover;
-            background-repeat: no-repeat;
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
@@ -115,9 +112,9 @@
 
     <footer>
         <div class="footer-buttons">
-            <button>Botón 1</button>
-            <button>Botón 2</button>
-            <button>Botón 3</button>
+            <button style="align-self: flex-start;">Botón 1</button>
+            <button style="align-self: center;">Botón 2</button>
+            <button style="align-self: flex-end;">Botón 3</button>
         </div>
         <p>Información adicional en el pie de página</p>
     </footer>
