--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <title>Guías de Juegos</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.11/lottie.min.js"></script>
     <script src="juegos.js"></script>
     <script src="consolas.js"></script>
@@ -112,9 +111,9 @@
 
     <footer>
         <div class="footer-buttons">
-            <button style="align-self: flex-start;">Botón 1</button>
-            <button style="align-self: center;">Botón 2</button>
-            <button style="align-self: flex-end;">Botón 3</button>
+            <button>Botón 1</button>
+            <button style="margin: auto;">Botón 2</button>
+            <button>Botón 3</button>
         </div>
         <p>Información adicional en el pie de página</p>
     </footer>
