--- a/index.html
+++ b/index.html
@@ -110,12 +110,14 @@
     </div>
 
     <footer>
+<footer>
         <div class="footer-buttons">
-            <button>Botón 1</button>
-            <button style="margin: auto;">Botón 2</button>
-            <button>Botón 3</button>
+            <button style="align-self: flex-start;">Botón 1</button>
+            <button style="align-self: center;">Botón 2</button>
+            <button style="align-self: flex-end;">Botón 3</button>
         </div>
         <p>Información adicional en el pie de página</p>
+    
     </footer>
 
     <script>
